# pinnacle-robotlabs

./: .gitignore  .prettierrc  README.md  docker-compose.deploy.build.yml  docker-compose.deploy.command.yml  docker-compose.deploy.env.yml  docker-compose.deploy.images.yml  docker-compose.deploy.labels.yml  docker-compose.deploy.networks.yml  docker-compose.deploy.volumes-placement.yml  docker-compose.dev.build.yml
backend/: .dockerignore  .gitignore  Dockerfile
backend/app/: api_test.py  data.json  dump_db.sh  dump_swarm.sh  manage.py  prestart.sh  pyproject.toml  restore_db.sh  run_test.sh  start.sh  start_celery_beat.sh  start_celery_worker.sh  start_stage.sh  test.json  wait-for-postgres.sh
backend/app/base_api/: log.py  paging.py  permissions.py  tool.py
backend/app/portfolio/: NT.MD  __init__.py  admin.py  constants.py  crm.py  data.py  models.py  nt8.py  nt8_2.py  nt8_new.py  router.py  s3_service.py  serializer.py  tasks.py  tests.py  utils.py  views.py
backend/app/portfolio/management/commands/: calc.py  calc2.py  clear_test.py  port.py  pre_calc.py  robot.py  trades.py
backend/app/portfolio/migrations/: 0001_initial.py
backend/app/robotlab/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/app/users/: admin.py  apps.py  models.py
backend/app/users/migrations/: 0001_initial.py
data/: portainer.db
es/: docker-compose.elasticsearch.yml
frontend/: Dockerfile  Dockerfile.local  nginx.conf
mysql/: Dockerfile.local  init_dev.sh  init_test.sh  localdb-run.sh  restore.sh
scripts/: build-local.sh  build-push.sh  copy_configs_to_swarm.sh  (+10 more)
(+54 files in other folders)
